# Basic-Interpreter-2024-main

./: Basic.cpp  CMakeLists.txt  evalstate.cpp  program.cpp  program.hpp  statement.cpp  statement.hpp
Utils/: error.cpp  error.hpp  strlib.cpp  strlib.hpp  tokenScanner.cpp
